# project-BenBenyamin

./: .gitignore  CMakeLists.txt  README.md  canvas.cpp  canvas.h  main.cpp  output  output.ppm  sphere.cpp  triangle.cpp  triangle.h  video.sh
include/: canvas.h  linalg.h  sphere.h  stl.h  triangle.h  triangle_object.h
prototype/: trig.py  trigProject.py  trigProject2.py
src/: Canvas.cpp  TriangleObject.cpp  TriangleSurface.cpp  canvas.cpp  linalg.cpp  main.cpp  sphere.cpp  stl.cpp  triangle.cpp  triangle_object.cpp
test/: CMakeLists.txt
test/stl/: single_triangle.stl  two_triangles.stl
test/unit/: TestCanvas.cpp  TestMain.cpp  TestTriangle.cpp  TestTriangleObject.cpp
